# dflib

./: .gitignore  .lvimrc  README.md  dflib.deps  makefile  meson.build
data/: dflib.xml
src/: AdvancedTreeModelFilter.vala  DataEntry.vala  DialogHelpers.vala  PathHelpers.vala  RequestProcessor.vala  Resource.vala  SelectionPopover.vala  SettingsGrid.vala  SimpleItem.vala  init.vala  meson.build
src/widgets/: EditableLabel.vala  StarBox.vala
