src = files(
  'init.vala',

  'AdvancedTreeModelFilter.vala',
  'DataEntry.vala',
  'SettingsGrid.vala',
  'SimpleItem.vala',
  'SelectionPopover.vala',
  'RequestProcessor.vala',
  'Resource.vala',

  'widgets/EditableLabel.vala',
  'widgets/StarBox.vala',
  )
target = shared_library('dflib', src,
                        dependencies : deps,
                        install : true)
